set up of the responsive design, and fixed the sliding titles so they cannot go out of the screen

--- a/src/styles/ContactForm.module.css
+++ b/src/styles/ContactForm.module.css
@@ -67,3 +67,12 @@
     font-style: italic;
     color: red;
 }
+
+@media (max-width: 768px) {
+
+    .contact_form_fields {
+        grid-template-columns: 100%;
+        grid-template-rows: 50% 50%;
+        gap: 100px;
+    }
+}
