--- a/src/styles/ProjectsGallery.module.css
+++ b/src/styles/ProjectsGallery.module.css
@@ -7,7 +7,8 @@
     align-items: center;
     justify-content: flex-start;
 }
-.hook{
+
+.hook {
     height: 100px;
     width: 100px
 }
@@ -19,10 +20,11 @@
     color: var(--secondary-color);
     position: absolute;
     top: 100px;
-    right: 100px;
+    right: 0px;
     z-index: 1000;
     transition: transform .8s ease-out;
     opacity: .9;
+    white-space: nowrap;
 }
 
 .projects_gallery_divider {
@@ -50,4 +52,43 @@
     grid-auto-rows: 70vh;
     gap: 50vh;
     padding-bottom: 50vh;
+}
+
+.projects_gallery_classic {
+    display: none;
+}
+
+/* Media Queries */
+
+@media (max-width: 1024px) {
+    .projects_gallery_title {
+        font-size: 4rem;
+        right: 10px;
+    }
+}
+
+@media (max-width: 768px) {
+    .projects_gallery_title {
+        font-size: 2.1rem;
+        right: 0px;
+    }
+
+    .projects_gallery_divider {
+        display: none;
+    }
+
+    .projects_gallery_classic {
+        padding: 100px  40px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: 300px;
+        gap: 20px;
+    }
+}
+
+@media (max-width: 600px) {
+
+    .projects_gallery_classic {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
